# PHOTO_CAD

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-exe.yml
PHOTO_CAD/: README.md
PHOTO_CAD/convert-orthophoto-to-dxf/: README.md  pyproject.toml  requirements.txt
PHOTO_CAD/convert-orthophoto-to-dxf/src/: cli.py  config.py  convert_orthophoto_to_dxf_snapping.py
PHOTO_CAD/convert-orthophoto-to-dxf/src/core/: dxf_export.py  raster.py  snapping.py  vectorize.py
PHOTO_CAD/convert-orthophoto-to-dxf/tests/: test_dxf_export.py  test_raster.py  test_snapping.py
examples/: sample_config.yaml
src/: __init__.py  cli.py  config.py  convert_orthophoto_to_dxf_snapping.py  gui.py  learning.py  types.py
src/core/: __init__.py  dxf_export.py  raster.py  snapping.py  vectorize.py
tests/: __init__.py  test_dxf_export.py  test_learning.py  test_raster.py  test_snapping.py
