[project]
name = "convert-orthophoto-to-dxf"
version = "0.1.0"
description = "A project for converting orthophotos to DXF files with snapping functionality."
authors = [
    {name = "PHOTO_CAD Team"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["orthophoto", "DXF", "snapping", "vectorization", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "ezdxf>=0.16.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.3",
    "pyyaml>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "black>=21.7b0",
    "flake8>=3.9.2",
]

[project.scripts]
convert-orthophoto-to-dxf = "src.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]